feat: support label on connection types
