# dc-controller/api/dataconnecthub/v1alpha1/zz_generated.deepcopy.go
@@ -470,6 +470,11 @@ func (in *InitDataConnectionTypeList) DeepCopyObject() runtime.Object {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *InitDataConnectionTypeSpec) DeepCopyInto(out *InitDataConnectionTypeSpec) {
 	*out = *in
+	if in.Label != nil {
+		in, out := &in.Label, &out.Label
+		*out = new(string)
+		**out = **in
+	}
 	if in.Description != nil {
 		in, out := &in.Description, &out.Description
 		*out = new(string)
@@ -481,6 +486,11 @@ func (in *InitDataConnectionTypeSpec) DeepCopyInto(out *InitDataConnectionTypeSp
 		for i := range *in {
 			(*in)[i].DeepCopyInto(&(*out)[i])
 		}
+	}
+	if in.Tags != nil {
+		in, out := &in.Tags, &out.Tags
+		*out = make([]string, len(*in))
+		copy(*out, *in)
 	}
 }
 
